<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.SettingsFragment">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center_horizontal"
        android:text="@string/settings_title"
        android:textSize="16pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <CheckBox
            android:id="@+id/update_data_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_updating_checkbox" />
        <Button
            android:id="@+id/force_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_updating_button" />
    </LinearLayout>


</LinearLayout>